--- a/35.md
+++ b/35.md
@@ -39,3 +39,17 @@ This NIP proposes an optional additional key like this:
 ````
 
 The `relays` key contains an object with public keys as properties and arrays of relays as values.
+
+Web servers which serve nostr.json files dynamically responding to the query string SHOULD also serve the relays data for any name they serve in the same reply.
+
+### Misdirection prevention
+
+There is a risk that someone could list another user's public key in their nostr.json file and supply relays where they do not operate. If clients believed such information, that person would effectively be silenced. This section specifies actions clients should take to prevent such misdirection.
+
+Relay information from nostr.json files should be considered as hints. Anything within the nostr protocol should be considered more authorative and supercede these hints. Public key signed events are more authorative than nostr.json file contents.
+
+Public keys listed under the `relays` key which are not found somewhere under a name under the `names` key should be ignored.
+
+If a client encounters NIP-05 metadata for a public key that refers to a different domain from the one which this nostr.json data came from, then these relay hints should be discarded as this domain is not authorative for that key. This prevents somebody from silencing someone by tricking clients into changing their relay.
+
+
